fix for invitationURI methods